[Bug] Widget overlapping in IE browser until reload the page. https://app.asana.com/0/20298069742332/550638700184480

--- a/assets/sass/cs.scss
+++ b/assets/sass/cs.scss
@@ -167,6 +167,16 @@
 		width: 100%;
 	}
 
+	.cs-wrap {
+		.widget-liquid-right {
+			.widget {
+				&.open {
+					z-index: 9999 !important;
+				}
+			}
+		}
+	}
+
 	.widget-liquid-right {
 		padding: 0 0 75px 0;
 		margin: -10px -214% 0 0;
